# vibe-resume

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh-CN.md  README.zh-TW.md  ROADMAP.md  SECURITY.md  cli.py  config.example.yaml  config.yaml  profile.example.yaml  pyproject.toml
.agents/skills/: ai-used-resume
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/ai-used-resume/: SKILL.md
.codex-plugin/: marketplace.json  plugin.json
.gemini/skills/: ai-used-resume
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  locale_request.yml
.github/workflows/: tests.yml
.hermes/skills/ai-used-resume/: SKILL.md
core/: aggregator.py  classifier.py  company_profiles.py  config.py  enrich_jobs.py  enricher.py  paths.py  personas.py  privacy.py  review.py  runner.py  schema.py  stats.py  tech_canonical.py  versioning.py
core/profiles/: 91app.yaml  adyen.yaml  ai21.yaml  aleph_alpha.yaml  amazon_aws.yaml  anthropic.yaml  appier.yaml  apple.yaml  atlassian.yaml  booking.yaml  cloudflare.yaml  cloudmile.yaml  cohere.yaml  coupang.yaml  cresta.yaml  cybozu.yaml  databricks.yaml  datadog.yaml  decagon.yaml  deepseek.yaml  dena.yaml  elevenlabs.yaml  freee.yaml  gitlab.yaml  glean.yaml  google_deepmind.yaml  harvey.yaml  hubspot.yaml  hugging_face.yaml  ikala.yaml  kakao.yaml  klarna.yaml  krafton.yaml  krutrim.yaml  line_jp.yaml  mercari.yaml  meta_fair.yaml  microsoft.yaml  mistral.yaml  moneyforward.yaml  (+30 more)
data/imports/: sample_jd.txt
docs/: PRINCIPLES.md  resume_locales.md  review_v007.md
docs/samples/: README.md  resume.en_EU.md  resume.ja_JP.md  resume.zh_TW.md
docs/superpowers/plans/: 2026-05-27-session-driven-enrich-plan.md  2026-05-29-agentic-skills-mcp-signal.md  2026-05-29-ai-proficiency-rubric.md  2026-05-29-canonical-project-key-dedupe.md  2026-05-29-curate-gate.md  2026-05-29-emphasis-lever.md  2026-05-29-github-extractor-and-richer-signal.md  2026-05-29-installed-toolkit-extractor.md  2026-05-29-orchestration-signal.md  2026-05-29-research-market-refresh.md  2026-05-29-sdd-tdd-methodology.md
extractors/: base.py
extractors/api/: elevenlabs.py  heygen.py  image_local.py  midjourney.py  runway.py  suno.py
extractors/cloud_export/: chatgpt.py  claude_ai.py  gemini_takeout.py  grok.py  mistral.py  perplexity.py  poe.py
extractors/local/: aider.py  claude_code.py  claude_code_archive.py  claude_desktop.py  cline.py  codex.py  continue_dev.py  copilot_cli.py  copilot_vscode.py  cursor.py  gemini_cli.py  git_repos.py  windsurf.py  zed_ai.py
render/: i18n.py  japan.py  renderer.py
render/templates/: resume.de_DE.md.j2  resume.en_EU.md.j2  resume.fr_FR.md.j2  resume.zh_CN.md.j2  resume.zh_TW.md.j2
scripts/: backup_claude_projects.ps1  backup_claude_projects.sh  com.vibe-resume.backup.plist  validate_plugin_e2e.sh  vibe-resume-backup.xml
skills/ai-used-resume/: SKILL.md
src/vibe_resume/: __init__.py  __main__.py  cli.py
tests/: test_agents.py  test_aggregator.py  test_aggregator_constants.py  test_aggregator_helpers.py  test_alignment_guardrails.py  test_candidates.py  test_classifier.py  test_cli_e2e.py  test_cli_enrich_modes.py  test_codebase_scan.py  test_company_profiles.py  test_company_verify_jobs.py  test_console_script_root.py  test_curate.py  test_curate_cli.py  test_curate_consumption.py  test_doctor.py  test_emphasis.py  test_emphasis_cli.py  test_enrich_jobs.py  test_enricher.py  test_enricher_apply.py  test_evidence.py  test_explore.py  test_extractors.py  test_extractors_base.py  test_gates.py  test_github_extractor.py  test_group_name_humanize.py  test_i18n.py  test_i18n_more.py  test_ingest_duplicate_groups.py  test_installed_env.py  test_iterate.py  test_jd_explain.py  test_packaging.py  test_paths.py  test_per_locale_cache.py  test_persona_compare.py  test_personas.py  (+26 more)
(+131 files in other folders)
