[project]
name = "vibe-resume"
version = "0.1.0"
description = "Turn your AI coding history (Claude Code, Cursor, Copilot, ChatGPT exports, git commits) into a versioned MD/DOCX/PDF résumé — for the vibe coding era."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "easyvibecoding" }]
keywords = [
    "resume",
    "resume-builder",
    "resume-generator",
    "cv-builder",
    "resume-tailoring",
    "ats-friendly",
    "jsonresume",
    "ai-coding-assistant",
    "claude-code",
    "developer-portfolio",
    "career",
    "self-hosted",
    "i18n",
    "europass",
    "japanese-resume",
    "pandoc",
    "docx",
    "markdown",
    "cli",
    "python",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: Chinese (Traditional)",
    "Natural Language :: Japanese",
    "Natural Language :: Korean",
    "Natural Language :: German",
    "Natural Language :: French",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "python-docx>=1.1",
    "click>=8.1",
    "rich>=13.7",
    "pygit2>=1.15",
    "pillow>=10.3",
    "mutagen>=1.47",
    "orjson>=3.10",
]

[project.optional-dependencies]
pdf = ["weasyprint>=62.0"]
dev = ["pytest>=8.2", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/easyvibecoding/vibe-resume"
Repository = "https://github.com/easyvibecoding/vibe-resume"
Issues = "https://github.com/easyvibecoding/vibe-resume/issues"

[project.scripts]
vibe-resume = "cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "extractors", "render"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Prompt strings and multi-locale regex tables blow past 100 chars by design;
# loop-variable closures inside the enricher/aggregator are intentional.
ignore = ["E501", "B023", "B007", "B905", "B033", "UP028", "UP042", "B034"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
